update: versão final

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -999,133 +999,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>defect_id</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>defect_type</th>\n",
-       "      <th>defect_date</th>\n",
-       "      <th>defect_location</th>\n",
-       "      <th>severity</th>\n",
-       "      <th>inspection_method</th>\n",
-       "      <th>repair_cost</th>\n",
-       "      <th>defect_month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Structural</td>\n",
-       "      <td>2024-06-06</td>\n",
-       "      <td>Component</td>\n",
-       "      <td>Minor</td>\n",
-       "      <td>Visual Inspection</td>\n",
-       "      <td>245.47</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Functional</td>\n",
-       "      <td>2024-04-26</td>\n",
-       "      <td>Component</td>\n",
-       "      <td>Minor</td>\n",
-       "      <td>Visual Inspection</td>\n",
-       "      <td>26.87</td>\n",
-       "      <td>2024-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>84</td>\n",
-       "      <td>Structural</td>\n",
-       "      <td>2024-02-15</td>\n",
-       "      <td>Internal</td>\n",
-       "      <td>Minor</td>\n",
-       "      <td>Automated Testing</td>\n",
-       "      <td>835.81</td>\n",
-       "      <td>2024-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Functional</td>\n",
-       "      <td>2024-03-28</td>\n",
-       "      <td>Internal</td>\n",
-       "      <td>Critical</td>\n",
-       "      <td>Automated Testing</td>\n",
-       "      <td>444.47</td>\n",
-       "      <td>2024-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Cosmetic</td>\n",
-       "      <td>2024-04-26</td>\n",
-       "      <td>Component</td>\n",
-       "      <td>Minor</td>\n",
-       "      <td>Manual Testing</td>\n",
-       "      <td>823.64</td>\n",
-       "      <td>2024-04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   defect_id  product_id defect_type defect_date defect_location  severity  \\\n",
-       "0          1          15  Structural  2024-06-06       Component     Minor   \n",
-       "1          2           6  Functional  2024-04-26       Component     Minor   \n",
-       "2          3          84  Structural  2024-02-15        Internal     Minor   \n",
-       "3          4          10  Functional  2024-03-28        Internal  Critical   \n",
-       "4          5          14    Cosmetic  2024-04-26       Component     Minor   \n",
-       "\n",
-       "   inspection_method  repair_cost defect_month  \n",
-       "0  Visual Inspection       245.47      2024-06  \n",
-       "1  Visual Inspection        26.87      2024-04  \n",
-       "2  Automated Testing       835.81      2024-02  \n",
-       "3  Automated Testing       444.47      2024-03  \n",
-       "4     Manual Testing       823.64      2024-04  "
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [
@@ -1647,7 +1520,7 @@
     "\n",
     "#### Insights\n",
     "\n",
-    "Vejo a necessidade de realizar um mapeamento do processo de produção e aplicar processos de controle de qualidade como o DMAIC do Six Sigma, para buscar a causa raíz das falhas estrurais na produção dos componentes de Superfície dos produtos. Um caminho apontado pela análise é começar pela investigação do que vem causando os ciclos de aumento e queda do número de defeitos nos Produtos com foco (1) em defeitos de severidade crítica, (2) defeitos do tipo estrurais que estão em tendência de crescimento, antes que os outros aspectos também aumentem a frequência de defeitos, e (3) nos defeitos na superfície dos produtos. "
+    "Vejo a necessidade de realizar um mapeamento do processo de produção e aplicar ferramentas como o DMAIC do Six Sigma, para buscar a causa raíz das falhas estrurais na produção dos componentes de Superfície dos produtos. Um caminho apontado pela análise é começar pela investigação do que vem causando os ciclos de aumento e queda do número de defeitos nos Produtos com foco (1) em defeitos de severidade crítica, (2) defeitos do tipo estrurais que estão em tendência de crescimento, antes que os outros aspectos também aumentem a frequência de defeitos, e (3) nos defeitos na superfície dos produtos. "
    ]
   }
  ],
