update: nova versão

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -13,18 +13,17 @@
     "**Uma pequena observação**: Como o conjunto de dados é simulado, irei utilizar como moeda o Real Brasileiro. \n",
     "\n",
     "## 1.2. Estrutura do dataset\n",
-    "|Coluna|Descrição|\n",
+    "|Feature|Descrição|\n",
     "|---|---|\n",
-    "|defect_id|Identificador único do defeito|\n",
-    "|product_id|ID do produto associado com o defeito|\n",
-    "|defect_type|Categória do defeito (cósmetico, funcional ou estrutural)|\n",
-    "|defect_description|Descrição do defeito|\n",
-    "|defect_date|Data de quando o defeito ocorreu|\n",
-    "|defect_location|Local onde o defeito foi encontrado (superficie, componente)|\n",
-    "|severity|Severidade do defeito (pequena, moderada, crítica)|\n",
-    "|inspection_method|Método de inspeção (inspeção visual, teste automatizado)|\n",
-    "|repair_action|Ação tomada para o reparo|\n",
-    "|repair_cost|Custo do reparo|"
+    "|``defect_id``|Identificador único do defeito|\n",
+    "|``product_id``|ID do produto associado com o defeito|\n",
+    "|``defect_type``|Categória do defeito (cósmetico, funcional ou estrutural)|\n",
+    "|``defect_description``|Descrição do defeito|\n",
+    "|``defect_date``|Data de quando o defeito ocorreu|\n",
+    "|``defect_location``|Local onde o defeito foi encontrado (superficie, componente)|\n",
+    "|``severity``|Severidade do defeito (pequena, moderada, crítica)|\n",
+    "|``inspection_method``|Método de inspeção (inspeção visual, teste automatizado)|\n",
+    "|``repair_cost``|Custo do reparo|"
    ]
   },
   {
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +456,7 @@
        "4     Manual Testing       823.64      2024-04  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
